--- a/cs/Markdown/Markdown.csproj
+++ b/cs/Markdown/Markdown.csproj
@@ -56,11 +56,13 @@
     <Compile Include="Tags\EmTag.cs" />
     <Compile Include="MarkdownTokenizer.cs" />
     <Compile Include="Md.cs" />
-    <Compile Include="Md_Should.cs" />
+    <Compile Include="MarkdownTests\MarkdownTokenizer_Should.cs" />
+    <Compile Include="MarkdownTests\Md_Should.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\StrongTag.cs" />
     <Compile Include="Tags\TagType.cs" />
+    <Compile Include="MarkdownTests\String_Should.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenInfo.cs" />
     <Compile Include="TokenType.cs" />
