--- a/cs/Markdown/Markdown.csproj
+++ b/cs/Markdown/Markdown.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Tags\DelTag.cs" />
     <Compile Include="Tags\EmTag.cs" />
     <Compile Include="MarkdownTokenizer.cs" />
     <Compile Include="Md.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="MarkdownTests\Md_Should.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tags\IPairTag.cs" />
     <Compile Include="Tags\StrongTag.cs" />
     <Compile Include="Tags\TagType.cs" />
     <Compile Include="MarkdownTests\String_Should.cs" />
